objects/BSB_Discount__c/BSB_Discount__c.object-meta.xml
<CustomObject>
    <description>Business Service Bundling Discoung</description>
    <label>BSB Discount</label>
    <nameField>
        <displayFormat>BSBD-{0000000}</displayFormat>
        <label>BSB Discount Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BSB Discounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>