objects/BSB_Discount__c/fields/Commitment_Level__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Level__c</fullName>
    <inlineHelpText>Commit level dollar amount</inlineHelpText>
    <label>Commitment Level</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>