objects/BSB_Discount__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BSB</fullName>
                <default>true</default>
                <label>BSB</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>