objects/BSB_Discount__c/fields/Effective_from_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_from_Date__c</fullName>
    <label>Effective from Date</label>
    <type>Date</type>
</CustomField>