objects/BSB_Discount__c/fields/Effective_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_to_Date__c</fullName>
    <label>Effective to Date</label>
    <type>Date</type>
</CustomField>