objects/BSB_Discount__c/fields/Min_monthly_spend__c.field-meta.xml
<CustomField>
    <fullName>Min_monthly_spend__c</fullName>
    <label>Min. monthly spend %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>