objects/BSB_Discount__c/fields/Ramp_period__c.field-meta.xml
<CustomField>
    <fullName>Ramp_period__c</fullName>
    <defaultValue>6</defaultValue>
    <inlineHelpText>Ramp period (months)</inlineHelpText>
    <label>Ramp period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>