objects/BSB_Discount__c/fields/Term_Length__c.field-meta.xml
<CustomField>
    <fullName>Term_Length__c</fullName>
    <inlineHelpText>in Months</inlineHelpText>
    <label>Term Length</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>24</fullName>
            </value>
            <value>
                <fullName>36</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>